--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
 name: der_homberger_app
-description: Business app with sophisticated methods to inform bus drivers about news regarding their bus routes and company matters
+description: Business app with sophisticated methods to inform bus drivers about
+  news regarding their bus routes and company matters
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
@@ -9,8 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^1.3.0
   firebase_auth: ^2.0.0
+  firebase_core: ^1.3.0
   provider: ^5.0.0
 
 dev_dependencies:
