PasswordScreen wrong password display conditions improved, first version of responsive scaffold, minor improvements

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,5 +37,6 @@ flutter:
     - family: Poppins
       fonts:
         - asset: assets/fonts/Poppins-SemiBold.ttf
+        - asset: assets/fonts/Poppins-Medium.ttf
         - asset: assets/fonts/Poppins-Italic.ttf
         - asset: assets/fonts/Poppins-Regular.ttf
