created loading and error screens, enhanced responsive scaffold and added first elements to the drawer, minor improvements

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,3 +40,6 @@ flutter:
         - asset: assets/fonts/Poppins-Medium.ttf
         - asset: assets/fonts/Poppins-Italic.ttf
         - asset: assets/fonts/Poppins-Regular.ttf
+    - family: UbuntuMono
+      fonts:
+        - asset: assets/fonts/UbuntuMono-Regular.ttf
