--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cloud_firestore: ^2.4.0
   firebase_auth: ^2.0.0
   firebase_core: ^1.3.0
+  firebase_storage: ^10.0.1
   provider: ^5.0.0
 
 dev_dependencies:
