--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -37,7 +37,7 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "de.carldressler.der_homberger_app" // "com.example.der_homberger_app"
-        minSdkVersion 16
+        minSdkVersion 21 // Standard ist 16, wegen MultiDex entfernt
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
