--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.der_homberger_app">
+   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- https://stackoverflow.com/questions/64343699/failed-to-load-providerinstaller-module-no-acceptable-module-found-local-versi -->
    <application
         android:label="der_homberger_app"
         android:icon="@mipmap/ic_launcher">
