--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,18 +8,21 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
   cloud_firestore: ^2.4.0
+  connectivity_plus: ^1.0.6
   firebase_auth: ^2.0.0
   firebase_core: ^1.3.0
   firebase_storage: ^10.0.1
+  flutter:
+    sdk: flutter
+  logger: ^1.0.0
   provider: ^5.0.0
+  restart_app: ^1.0.3
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.9.0
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.9.0
 
 flutter_icons:
   android: true
